<resources>
    <string name="app_name">Dalal Street</string>
    <string name="login_text">LOGIN</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="home">Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="orderType">
        <item>Limit Order</item>
        <item>Market Order</item>
        <item>Stoploss Order</item>
    </string-array>
    <string name="help">Help</string>
    <string name="username">Username</string>
    <string name="cash_worth">Cash In Hand</string>
    <string name="pick_a_company">Pick a Company</string>
    <string name="ask">ASK</string>
    <string name="bid">BID</string>
    <string name="order_price">Order price</string>
    <string name="retrieve_stocks">Retrieve Stocks</string>
    <string name="enter_the_number_of_stocks">Number of stocks</string>
    <string name="logout">Logout</string>
    <string name="stock_details">Stock Details</string>
    <string name="market_depth">Market Depth</string>
    <string name="buy_stocks">Buy Stocks from Exchange</string>
    <string name="wealth">WEALTH</string>
    <string name="name">NAME</string>
    <string name="rank">RANK</string>
    <string name="signing_in">Signing In…</string>
    <string name="company_profile">Company Profile</string>
    <string name="portfolio">Portfolio</string>
    <string name="news">News</string>
    <string name="stock_exchange">Stock Exchange</string>
    <string name="mortgage">Mortgage</string>
    <string name="my_orders">Open Orders</string>
    <string name="transactions">Transactions</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="stock_worth">Stock Worth</string>
    <string name="total_worth">Total Worth</string>
    <string name="no_transactions_found">No transactions found.</string>
    <string name="news_not_available">No breaking news available</string>
    <string name="notifications_not_available">No Notifications</string>
    <string name="company_image_description">company_image_view</string>
    <string name="getting_latest_news">Getting latest news…</string>
    <string name="loading_leaderboard">Getting LeaderBoard…</string>
    <string name="loading_transaction">Getting Transactions…</string>
    <string name="companies">Companies</string>
    <string name="trade">Trade</string>
    <string name="company">Company</string>
    <string name="cancel">Cancel</string>
    <string name="no_orders_pending">Looks like you don\'t have any\norders pending…</string>
    <string name="getting_your_orders">Getting your orders…</string>
    <string name="you_don_t_own_any_stocks">You don\'t own any stocks.</string>
    <string name="daily_high">Daily High</string>
    <string name="daily_low">Daily Low</string>
    <string name="stocks_in_market">Stocks in Market</string>
    <string name="stocks_in_exchange">Stocks in Exchange</string>
    <string name="n_a">: N/A</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price(₹)</string>
    <string name="current_price">Current Price</string>
    <string name="stocks_owned">Stocks Owned</string>
    <string name="stocks_mortgaged">Stocks Mortgaged</string>
    <string name="mortgage_deposit_rate">Mortgage Deposit Rate</string>
    <string name="mortgage_retrival_rate">Mortgage Retrieval Rate</string>
    <string name="change">Change %</string>
    <string name="volume">Volume</string>
    <string name="play">Play</string>
    <string name="getting_depth">Getting Market Details…</string>
    <string name="askdepth">Ask Depth</string>
    <string name="biddepth">Bid Depth</string>
    <string name="worth">Worth</string>
    <string name="made_with_u2661_by_delta_force">Made with ♡ by Delta Force</string>
    <string name="sell">SELL</string>
    <string name="buy">BUY</string>
    <string name="name_lowercase">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_signing_in">Error Signing In</string>
    <string name="error_server_down">Server Unreachable</string>
    <string name="help_title">Help</string>
    <string name="select_a_company_to_view_depth">Select a company to view depth</string>
    <string name="no_open_orders">No Open Orders</string>
    <string name="dalal_street_notifications">Dalal Street Notifications</string>
    <string name="orders_frag_label">Open Orders</string>
    <string name="leaderboard_frag_label">Leaderboard</string>
    <string name="news_details_frag_label">News Details</string>
    <string name="notification_tour">Watch out for all notifications related to market here</string>
    <string name="newsrecycler_tour">News will be updated here in the app </string>
    <string name="percentchange_tour">See how stock prices are fluctuating here</string>
    <string name="ordertype_tour">Switch between different types of Orders here</string>
    <string name="deptgfraph_tour">Graph for Market Depth</string>
    <string name="bidepth_tour">Bid Depth </string>
    <string name="askdepth_tour">Ask Depth</string>
    <string name="incrementFive">+5</string>
    <string name="decrementOne">-1</string>
    <string name="incrementOne">+1</string>
    <string name="marketClose">Market is Closed \t\t\t Market is Closed \t\t\t Market is Closed</string>
    <string name="up_arrow">&#8593;</string>
    <string name="down_arrow">&#8595;</string>
    <string name="notification_channel_id">dalal_notification_channel</string>
    <string name="notification_channel_description">dalal_notification_channel</string>
    <string name="notifications">Notifications</string>
    <string name="register">REGISTER</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify">Verify</string>
    <string name="phone_number">Phone Number</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">RESEND</string>
    <string name="country_code">Country code</string>
    <string name="india_country_code">91</string>
</resources>