<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/information_category">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/title_activity_home" />

        <item
            android:id="@+id/nav_company_profile"
            android:icon="@drawable/ic_action_performance"
            android:title="@string/company_profile" />

        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_action_portfolio"
            android:title="@string/portfolio" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_action_news"
            android:title="@string/news" />
    </group>

    <group android:id="@+id/stock_category">

        <item
            android:id="@+id/nav_exchange"
            android:icon="@drawable/ic_action_company"
            android:title="@string/stock_exchange" />

        <item
            android:id="@+id/nav_buy_sell"
            android:icon="@drawable/ic_action_exchange"
            android:title="@string/buy_sell" />

        <item
            android:id="@+id/nav_mortgage"
            android:icon="@drawable/ic_action_mortgage"
            android:title="@string/mortgage" />

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_action_orders"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_action_transactions"
            android:title="@string/transactions" />

    </group>

    <group android:id="@+id/view_category">

        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_action_leaderboard"
            android:title="@string/leaderboard" />

    </group>

</menu>
