<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="org.pragyan.dalal18.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/mortgage_dest"
        android:name="org.pragyan.dalal18.fragment.MortgageFragment"
        android:label="@string/mortgage"
        tools:layout="@layout/fragment_mortgage">
    </fragment>

    <fragment
        android:id="@+id/companies_dest"
        android:name="org.pragyan.dalal18.fragment.CompanyFragment"
        android:label="@string/companies"
        tools:layout="@layout/fragment_companies">
    </fragment>

    <fragment
        android:id="@+id/news_dest"
        android:name="org.pragyan.dalal18.fragment.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news">
    </fragment>

</navigation>
