<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/rank_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".6"
        android:gravity="center"
        android:text="@string/rank"
        android:fontFamily="@font/kreon_light"
        android:textColor="@color/neutral_font_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/name"
        android:fontFamily="@font/kreon_light"
        android:textColor="@color/neutral_font_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/wealth_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".75"
        android:gravity="center"
        android:text="@string/wealth"
        android:fontFamily="@font/kreon_light"
        android:textColor="@color/neutral_font_color"
        android:textSize="18sp" />

</LinearLayout>