<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registrationToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:orientation="horizontal"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight=".8"
        android:paddingEnd="2dp"
        android:paddingStart="12dp"
        android:textColorHint="@color/neutral_font_color">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/kreon_light"
            android:hint="@string/name_lowercase"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@color/neutral_font_color"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight=".8"
        android:paddingEnd="2dp"
        android:paddingStart="12dp"
        android:textColorHint="@color/neutral_font_color">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/kreon_light"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLength="45"
            android:maxLines="1"
            android:textColor="@color/neutral_font_color"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight=".8"
        android:hint="@string/password"
        android:paddingEnd="2dp"
        android:paddingStart="12dp"
        android:textColorHint="@color/neutral_font_color">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/kreon_light"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/neon_orange"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight=".8"
        android:hint="@string/confirm_password"
        android:paddingEnd="2dp"
        android:paddingStart="12dp"
        android:textColorHint="@color/neutral_font_color">

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/kreon_light"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/neon_orange"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        android:layout_weight=".5"
        android:backgroundTint="@color/neutral_font_color"
        android:textColorHint="@color/neutral_font_color" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:background="@drawable/black_green_rounded_button"
        android:fontFamily="@font/marcellus_sc"
        android:padding="12dp"
        android:text="@string/register"
        android:textColor="@color/neon_blue"
        android:textSize="22sp"
        android:textStyle="bold" />

</LinearLayout>