<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clPhoneNoVerification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_background"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_phone_no"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/marcellus_sc"
            android:padding="12dp"
            android:text="@string/enter_otp"
            android:textColor="@color/neutral_font_color"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/neutral_font_color"
            android:id="@+id/enter_otp_mobno_edit_text"
            android:fontFamily="@font/kreon_light"
            android:hint="@string/mobile_number"
            android:focusable="false"
            android:clickable="false"
            android:inputType="none"
            android:maxLines="1"
            android:textColor="@color/neutral_font_color"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/neutral_font_color" />

        <org.pragyan.dalal18.ui.OtpEditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="4"
            android:textIsSelectable="false"
            android:backgroundTint="@color/neutral_font_color"
            android:fontFamily="@font/kreon_light"
            android:textColor="@color/neutral_font_color"
            android:textColorHint="@color/neutral_font_color"
            android:hint="@string/otp"
            android:textSize="20sp"
            >
        </org.pragyan.dalal18.ui.OtpEditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnVerifyOtp"
                android:text="@string/verify_otp"
                android:textColor="@color/neutral_font_color"
                android:background="@drawable/black_white_rounded_button"
                android:layout_marginEnd="18dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnResendOtp"
                android:text="@string/resend_otp"
                android:textColor="@color/neutral_font_color"
                android:background="@drawable/black_white_rounded_button"
                android:layout_marginStart="18dp"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>